# zygravan

./: .gitignore  Cargo.toml  README.md  build.rs  disassemble.bat  examine.bat  gba.ld  notes.md
.cargo/: config.toml
.github/workflows/: debug_build.yml  release_main.yml
assets/: CGA8x8thick.h  CGA8x8thick.s  grit-pack.bat
src/: fixed_point.rs  lib.rs  rt0.S
src/gba/: bg_charblock.rs  bios.rs  default_art.rs  display_control.rs  display_status.rs  key_input.rs  mod.rs  palette.rs  text_screenblock.rs
src/voladdress_next/: mod.rs  volregion.rs
