[package]
name = "zygravan"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/Lokathor/zygravan"
license = "AGPL-3.0-only"
publish = false

[dependencies]
voladdress = { version = "1.0.2", features = ["experimental_volregion"] }
bytemuck = "1"

[profile.dev]
panic = "abort"
opt-level = 3
lto = true

[profile.dev.package."*"]
#debug-assertions = false
#overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
